--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "builder-pattern-amourramanantsiresy",
   "version": "1.0.0",
   "description": "This is a code that will used to build Car with the builder pattern",
-  "main": "index.js",
+  "main": "src/index.ts",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.16",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.3.3"
   }
 }
