--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,16 @@
 {
+  "ts-node": {
+    "compilerOptions": {
+      "target": "ESNext",
+      "module": "CommonJS",
+      "esModuleInterop": true,
+      "composite": true
+    }
+  },
   "compilerOptions": {
-    "target": "es2016",
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true
-  }
+    "module": "esnext",
+    "composite": true,
+    "esModuleInterop": true
+  },
+  "include": ["src/**/*.ts"]
 }
